Add current amount computation for piggy banks